Fix: dark mode button z index problem

--- a/src/components/checkout/Checkout.module.css
+++ b/src/components/checkout/Checkout.module.css
@@ -4,7 +4,7 @@
     background-color: rgba(27, 26, 33, 0.671);
     display: block;
     position: fixed;
-    z-index: 0;
+    z-index: 1;
     top: 0;
 }
 
