--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -65,6 +65,8 @@
     border: 1px solid var(--primaryGrey);
     margin-right: 40px;
     cursor: pointer;
+    position: relative;
+    z-index: 0;
 }
 
 .darkModeButton:hover {
